docs: correct package scope

--- a/template-readme.hbs
+++ b/template-readme.hbs
@@ -43,7 +43,7 @@ More or less just for fun.
 **Example**
 
 ```js
-import { rot13 } from 'string-mutilator';
+import { rot13 } from '@0x04/string-mutilator';
 
 rot13(rot13('Hello World!')) === 'Hello World!';
 // > true
@@ -60,7 +60,7 @@ rot13(rot13('Hello World!')) === 'Hello World!';
 **Example**
 
 ```
-import { shift } from 'string-mutilator';
+import { shift } from '@0x04/string-mutilator';
 
 shift(shift('Hello World!', 5), -5) === 'Hello World!';
 // > true
@@ -77,13 +77,13 @@ shift(shift('Hello World!', 5), -5) === 'Hello World!';
 **To use it in your project**
 
 ```bash
-npm install --save string-mutilator
+$ npm install --save @0x04/string-mutilator
 ```
 
 **To use it globally**
 
 ```bash
-npm install --global string-mutilator
+$ npm install --global @0x04/string-mutilator
 ```
 
 ### General usage
