feat: new function `gobbledygook`

--- a/template-readme.hbs
+++ b/template-readme.hbs
@@ -102,6 +102,7 @@ $ string-mutilator --help
       compressor.unpack
       compressor.signature
       flipBits
+      gobbledygook
       jumble
       reverse
       reverseBits
