--- a/template-readme.hbs
+++ b/template-readme.hbs
@@ -112,6 +112,8 @@ $ string-mutilator --help
       shift
       shiftBits
       toMANS
+      unicode.fixSurrogates
+      unicode.unfixSurrogates
 
     Examples
       $ string-mutilator shift "Hello World!" 6
