--- a/template-readme.hbs
+++ b/template-readme.hbs
@@ -23,6 +23,13 @@ So I decided to combine these "strange" functions into one library.
 More or less just for fun.
 
 
+## Demo
+
+A [comprehensive demo][pseudo-cipherer-demo] of all functions can be found in
+the demonstration of this library/package in the demo project
+[`pseudeo-chiperer`][pseudo-cipherer-repo].
+
+
 ## Table of content
 
 1. [Modules](#user-content-module)
@@ -40,6 +47,11 @@ More or less just for fun.
 
 ### List of involutory functions
 
+* [`flipBits`](#flipBits)
+* [`reverse`](#reverse)
+* [`reverseBits`](#reverseBits)
+* [`rot13`](#rot13)
+
 **Example**
 
 ```js
@@ -49,25 +61,50 @@ rot13(rot13('Hello World!')) === 'Hello World!';
 // > true
 ```
 
-* [`charCase.invert`](#module_stringMutilator/charCase.invert)
-* [`flipBits`](#flipBits)
-* [`reverse`](#reverse)
-* [`reverseBits`](#reverseBits)
-* [`rot13`](#rot13)
-
 ### List of involutory functions with negated arguments
+
+* [`charCase.invert`](#module_stringMutilator/charCase..invert)
+* [`shift`](#shift)
+* [`shiftBits`](#shiftBits)
 
 **Example**
 
-```
+```js
 import { shift } from '@0x04/string-mutilator';
 
 shift(shift('Hello World!', 5), -5) === 'Hello World!';
 // > true
 ```
 
-* [`shift`](#shift)
-* [`shiftBits`](#shiftBits)
+### List of involutory functions with counter function
+
+* [`compressor.pack`](#module_stringMutilator/compressor..pack) / [`compressor.unpack`](#module_stringMutilator/compressor..unpack)
+* [`unicode.fixSurrogates`](#module_stringMutilator/unicode..fixSurrogates) / [`unicode.unfixSurrogates`](#module_stringMutilator/unicode..unfixSurrogates)
+
+**Examples**
+
+```js
+import { compressor } from '@0x04/string-mutilator';
+
+compressor.unpack(compressor.pack('Hello World!')) === 'Hello World!';
+// > true
+```
+
+### List of non involutory functions
+
+* [`compressor.signature`](#module_stringMutilator/compressor..signature)
+* [`gobbledygook`](#gobbledygook)
+* [`jumble`](#jumble)
+* [`rockdotize`](#rockdotize)
+* [`scramble`](#scramble)
+* [`toMANS`](#toMANS)
+
+```js
+import { jumble } from '@0x04/string-mutilator';
+
+jumble(jumble('Hello World!')) === 'Hello World!';
+// > false
+```
 
 
 ## Using the CLI
@@ -134,7 +171,8 @@ $ string-mutilator --help
 
 <!-- Links -->
 [0x04]: mailto:ok@0x04.de
-
+[pseudo-cipherer-demo]: https://0x04.github.io/pseudo-cipherer
+[pseudo-cipherer-repo]: https://github.com/0x04/pseudo-cipherer
 
 <!-- Appendix -->
 [involution]: https://en.wikipedia.org/wiki/Involution_(mathematics)
