feat(charCase): add new functions
new functions

- snakeCase
- camelCase
- kebabCase
- dotCase
- pascalCase
- capitalize

--- a/template-readme.hbs
+++ b/template-readme.hbs
@@ -138,6 +138,12 @@ $ string-mutilator --help
       compressor.pack
       compressor.unpack
       compressor.signature
+      charCase.snakeCase
+      charCase.camelCase
+      charCase.kebabCase
+      charCase.dotCase
+      charCase.pascalCase
+      charCase.capitalize
       flipBits
       gobbledygook
       jumble
